--- a/product-default.html
+++ b/product-default.html
@@ -47,25 +47,6 @@
                     <div class="header__actions">
                         <a class="header__extra" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-chart-bars"></i><span><i>0</i></span></a>
                         <a class="header__extra" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-heart"></i><span><i>0</i></span></a>
-                        <div class="ps-cart--mini">
-                            <a class="header__extra" href="#"><i class="icon-bag2"></i><span><i>0</i></span></a>
-                            <div class="ps-cart__content">
-                                <div class="ps-cart__items">
-                                    <div class="ps-product--cart-mobile">
-                                        <div class="ps-product__thumbnail">
-                                            <a href="#"><img src="img/products/clothing/5.jpg" alt=""></a>
-                                        </div>
-                                        <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">Sleeve Linen Blend Caro Pane Shirt</a>
-                                            <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="ps-cart__footer">
-                                    <h3>Sub Total:<strong>$5.99</strong></h3>
-                                    <figure><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
-                                </div>
-                            </div>
-                        </div>
                         <div class="ps-block--user-header">
                             <div class="ps-block__left"><i class="icon-user"></i></div>
                             <div class="ps-block__right"><a href="my-account.html">Login</a><a href="my-account.html">Register</a></div>
@@ -86,7 +67,7 @@
                 </div>
                 <div class="navigation__right">
                     <ul class="navigation__extra">
-                        <li><a href="seller-account.html">Sell on RMG Stock</a></li>
+                        <li><a href="seller-account.html">Seller Login</a></li>
                         <li>
                             <div class="ps-dropdown"><a href="#" data-toggle="tooltip" title="This is a prototype">US Dollar</a>
                                 <ul class="ps-dropdown-menu">
@@ -148,33 +129,6 @@
             </div>
             <div class="navigation__right">
                 <div class="header__actions">
-                    <div class="ps-cart--mini"><a class="header__extra" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-bag2"></i><span><i>0</i></span></a>
-                        <div class="ps-cart__content">
-                            <div class="ps-cart__items">
-                                <div class="ps-product--cart-mobile">
-                                    <div class="ps-product__thumbnail">
-                                        <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/products/clothing/4.jpg" alt=""></a>
-                                    </div>
-                                    <div class="ps-product__content"><a class="ps-product__remove" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-cross"></i></a><a href="product-default.html">Men's Sport Running Swim 
-                                    Shorts</a>
-                                        <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
-                                    </div>
-                                </div>
-                                <div class="ps-product--cart-mobile">
-                                    <div class="ps-product__thumbnail">
-                                        <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/products/clothing/5.jpg" alt=""></a>
-                                    </div>
-                                    <div class="ps-product__content"><a class="ps-product__remove" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-cross"></i></a><a href="product-default.html">Black Dip Dye Unisex T-Shirt</a>
-                                        <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="ps-cart__footer">
-                                <h3>Sub Total:<strong>$5.99</strong></h3>
-                                <figure><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
-                            </div>
-                        </div>
-                    </div>
                     <div class="ps-block--user-header">
                         <div class="ps-block__left"><i class="icon-user"></i></div>
                         <div class="ps-block__right"><a href="my-account.html">Login</a><a href="my-account.html">Register</a></div>
@@ -191,34 +145,10 @@
             </form>
         </div>
     </header>
-    <!-- PWA cart -->
-    <div class="ps-panel--sidebar" id="cart-mobile">
-        <div class="ps-panel__header">
-            <h3>Shopping Cart</h3>
-        </div>
-        <div class="navigation__content">
-            <div class="ps-cart--mobile">
-                <div class="ps-cart__content">
-                    <div class="ps-product--cart-mobile">
-                        <div class="ps-product__thumbnail">
-                            <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/products/clothing/7.jpg" alt=""></a>
-                        </div>
-                        <div class="ps-product__content"><a class="ps-product__remove" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-cross"></i></a><a href="product-default.html">MVMTH Classical Leather Watch In Black</a>
-                            <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="ps-cart__footer">
-                    <h3>Sub Total:<strong>$5.99</strong></h3>
-                    <figure><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
 
-    <nav class="navigation--mobile-product"><a class="ps-btn ps-btn--black" href="#" data-toggle="tooltip" title="This is a prototype">Buy Sample($5)</a><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">Make Offer</a></nav>
+    <nav class="navigation--mobile-product"><a class="ps-btn ps-btn--black" href="#" data-toggle="tooltip" title="This is a prototype">View Mobile Number</a><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">Contact Seller</a></nav>
     <div class="ps-breadcrumb">
         <div class="ps-container">
             <ul class="breadcrumb">
@@ -266,6 +196,7 @@
                                         </select><span>(1 review)</span>
                                     </div>
                                 </div>
+                                <!--
                                 <div class="bid-section mb-20">
                                     <div class="bid-sections">
                                         <div class="heading">Highest Bid</div>
@@ -280,11 +211,13 @@
                                         <div class="bid-data"><b>02</b> Days <b>21</b> Hours <b>14</b> Minutes</div>
                                     </div>
                                 </div>
-                                <!--<h4 class="ps-product__price">$3500</h4>--->
+                                -->
+                                <h4 class="ps-product__price">$9.50</h4>
+                                <p><i>(Contact seller for latest price)</i></p>
                                 <div class="ps-product__desc">
                                     <!-- <p>Sold By:<a href="shop-default.html"><strong> Muhammad Textile</strong><span class="badge badge-custom"><i class="fa fa-check-circle"></i> verified by BGMEA</span></a></p> -->
                                     <ul class="ps-list--dot">
-                                        <li> <b>Unit Price: $5</b></li>
+                                        <!--<li> <b>Unit Price: $5</b></li>--->
                                         <li> Care Instructions: Gentle Machine Wash Onl</li>
                                         <li> Fit Type: Slim Fit </li>
                                         <li> Fabric: Cotton </li>
@@ -309,7 +242,8 @@
                                             <input class="form-control" type="text" placeholder="1">
                                         </div>
                                     </figure> -->
-                                    <a class="ps-btn ps-btn--black" href="checkout.html">Buy Sample ($5)</a><a class="ps-btn" href="#" data-toggle="modal" data-target="#exampleModalCenter">Make an Offer</a>
+                                    <a class="ps-btn ps-btn--black show-mobile-number" href="#">View Mobile Number</a>
+                                    <a class="ps-btn" href="#" data-toggle="modal" data-target="#exampleModalCenter">Contact Seller</a>
                                     <div class="ps-product__actions"><a href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-heart"></i></a><a href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-chart-bars"></i></a></div>
                                 </div>
                                 <div class="ps-product__specification"><a class="report" href="#" data-toggle="tooltip" title="This is a prototype">Report Abuse</a>
@@ -319,9 +253,8 @@
                                     <p class="tags"><strong> Tags</strong><a href="#" data-toggle="tooltip" title="This is a prototype">shirt</a>,<a href="#" data-toggle="tooltip" title="This is a prototype">polo</a>,<a href="#" data-toggle="tooltip" title="This is a prototype">casual shirt</a></p>
                                 </div>
                                 <div class="ps-product__sharing"><a class="facebook" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-facebook"></i></a><a class="twitter" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-twitter"></i></a>
-                                    <a
-                                        class="google" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-google-plus"></i></a>
-                                        <a class="linkedin" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-linkedin"></i></a><a class="instagram" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-instagram"></i></a></div>
+                                    <a class="google" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-google-plus"></i></a>
+                                    <a class="linkedin" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-linkedin"></i></a><a class="instagram" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-instagram"></i></a></div>
                             </div>
                         </div>
                         <div class="ps-product__content">
@@ -470,15 +403,28 @@
                     </div>
                 </div>
                 <div class="ps-page__right">
-                    <aside class="widget widget_product widget_features">
-                        <p><i class="icon-network"></i> Shipping worldwide. Additional shipping charges will apply based on your destination.</p>
-                        <p><i class="icon-receipt"></i> Supplier give bills for this product.</p>
-                        <p><i class="icon-credit-card"></i> Pay online or when receiving goods</p>
-                        <p><img src="img/payment-method/ssl.png" alt=""></p>
-                    </aside>
-                    <aside class="widget widget_sell-on-site">
-                        <p><i class="icon-store"></i> Sell on RMG Stock?<a href="seller-account.html"> Register Now !</a></p>
-                    </aside>
+                    <div class="ps-block--vendor">
+                        <div class="ps-block__thumbnail"><img src="img/vendor/vendor-store.jpg" alt=""></div>
+                        <div class="ps-block__container">
+                            <div class="ps-block__header">
+                                <h4>Corcorde Garments Group</h4>
+                                <div class="br-wrapper br-theme-fontawesome-stars">
+                                    <select class="ps-rating" data-read-only="true" style="display: none;">
+                                        <option value="1">1</option>
+                                        <option value="1">2</option>
+                                        <option value="1">3</option>
+                                        <option value="1">4</option>
+                                        <option value="2">5</option>
+                                    </select>
+                                </div>
+                                <p><strong>85% Positive</strong> (562 rating)</p>
+                            </div><span class="ps-block__divider"></span>
+                            <div class="ps-block__content">
+                                <p>The year was 1983, Bangladesh, still a baby nation on the verge of building its business infrastructure, was working on all grounds to make a space for the nation in the world economy. Entrepreneurs were trying hard with their expertise and vision to provide support for the country to grow.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -870,6 +816,12 @@
     <script src="js/main.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxflHHc5FlDVI-J71pO7hM1QJNW1dRp4U&amp;region=GB"></script>
 
+    <script>
+        $(".show-mobile-number").click(function() {
+            $(this).text("+880 1XXX XXX XXX");
+        });
+    </script>
+
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -879,18 +831,22 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <form class="ps-form--review" action="#" method="get">
-                        <h4 class="mt-40">Make an Offer</h4>
+                    <form class="ps-form--review" action="http://nouthemes.net/html/martfury/index.html" method="get">
+                        <h4 class="mt-40">Contact with Seller</h4>
                         <div class="form-group">
-                            <label>Bidding Amount</label>
-                            <input class="form-control big-placeholder" type="number" placeholder="$ 0.00">
+                            <label>Your Email Address</label>
+                            <input class="form-control" type="email" placeholder="Email Address">
+                        </div>
+                        <div class="form-group">
+                            <label>Your Phone Number</label>
+                            <input class="form-control" type="tel" placeholder="ex: 01XXX XXX XXX">
                         </div>
                         <div class="form-group">
                             <label>Comment to Seller</label>
                             <textarea class="form-control" rows="6" placeholder="Write your Comment here"></textarea>
                         </div>
                         <div class="form-group submit">
-                            <a class="ps-btn ps-btn--black" href="product-default.html">Submit Offer</a>
+                            <a class="ps-btn ps-btn--black" href="product-default.html">Send</a>
                         </div>
                     </form>
                 </div>
