--- a/seller-account.html
+++ b/seller-account.html
@@ -48,25 +48,6 @@
                     <div class="header__actions">
                         <a class="header__extra" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-chart-bars"></i><span><i>0</i></span></a>
                         <a class="header__extra" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-heart"></i><span><i>0</i></span></a>
-                        <div class="ps-cart--mini">
-                            <a class="header__extra" href="#"><i class="icon-bag2"></i><span><i>0</i></span></a>
-                            <div class="ps-cart__content">
-                                <div class="ps-cart__items">
-                                    <div class="ps-product--cart-mobile">
-                                        <div class="ps-product__thumbnail">
-                                            <a href="#"><img src="img/products/clothing/5.jpg" alt=""></a>
-                                        </div>
-                                        <div class="ps-product__content"><a class="ps-product__remove" href="#"><i class="icon-cross"></i></a><a href="product-default.html">Sleeve Linen Blend Caro Pane Shirt</a>
-                                            <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="ps-cart__footer">
-                                    <h3>Sub Total:<strong>$5.99</strong></h3>
-                                    <figure><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
-                                </div>
-                            </div>
-                        </div>
                         <div class="ps-block--user-header">
                             <div class="ps-block__left"><i class="icon-user"></i></div>
                             <div class="ps-block__right"><a href="my-account.html">Login</a><a href="my-account.html">Register</a></div>
@@ -87,7 +68,7 @@
                 </div>
                 <div class="navigation__right">
                     <ul class="navigation__extra">
-                        <li><a href="seller-account.html">Sell on RMG Stock</a></li>
+                        <li><a href="seller-account.html">Seller Login</a></li>
                         <li>
                             <div class="ps-dropdown"><a href="#" data-toggle="tooltip" title="This is a prototype">US Dollar</a>
                                 <ul class="ps-dropdown-menu">
@@ -149,33 +130,6 @@
             </div>
             <div class="navigation__right">
                 <div class="header__actions">
-                    <div class="ps-cart--mini"><a class="header__extra" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-bag2"></i><span><i>0</i></span></a>
-                        <div class="ps-cart__content">
-                            <div class="ps-cart__items">
-                                <div class="ps-product--cart-mobile">
-                                    <div class="ps-product__thumbnail">
-                                        <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/products/clothing/4.jpg" alt=""></a>
-                                    </div>
-                                    <div class="ps-product__content"><a class="ps-product__remove" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-cross"></i></a><a href="product-default.html">Men's Sport Running Swim 
-                                    Shorts</a>
-                                        <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
-                                    </div>
-                                </div>
-                                <div class="ps-product--cart-mobile">
-                                    <div class="ps-product__thumbnail">
-                                        <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/products/clothing/5.jpg" alt=""></a>
-                                    </div>
-                                    <div class="ps-product__content"><a class="ps-product__remove" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-cross"></i></a><a href="product-default.html">Black Dip Dye Unisex T-Shirt</a>
-                                        <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="ps-cart__footer">
-                                <h3>Sub Total:<strong>$5.99</strong></h3>
-                                <figure><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
-                            </div>
-                        </div>
-                    </div>
                     <div class="ps-block--user-header">
                         <div class="ps-block__left"><i class="icon-user"></i></div>
                         <div class="ps-block__right"><a href="my-account.html">Login</a><a href="my-account.html">Register</a></div>
@@ -192,31 +146,6 @@
             </form>
         </div>
     </header>
-    <!-- PWA cart -->
-    <div class="ps-panel--sidebar" id="cart-mobile">
-        <div class="ps-panel__header">
-            <h3>Shopping Cart</h3>
-        </div>
-        <div class="navigation__content">
-            <div class="ps-cart--mobile">
-                <div class="ps-cart__content">
-                    <div class="ps-product--cart-mobile">
-                        <div class="ps-product__thumbnail">
-                            <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/products/clothing/7.jpg" alt=""></a>
-                        </div>
-                        <div class="ps-product__content"><a class="ps-product__remove" href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-cross"></i></a><a href="product-default.html">MVMTH Classical Leather Watch In Black</a>
-                            <p><strong>Quantity: </strong><small>1 x $5.99</small></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="ps-cart__footer">
-                    <h3>Sub Total:<strong>$5.99</strong></h3>
-                    <figure><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">View Cart</a><a class="ps-btn" href="checkout.html">Checkout</a></figure>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
     <div class="ps-page--single ps-page--vendor">
         <div class="ps-page--my-account">
@@ -252,7 +181,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group submtit">
-                                        <button class="ps-btn ps-btn--fullwidth">Login</button>
+                                        <a href="seller-profile.html" class="ps-btn ps-btn--fullwidth">Login</a>
                                     </div>
                                 </div>
                                 <div class="ps-form__footer">
@@ -296,7 +225,7 @@
                                     </div>
                                     --->
                                     <div class="form-group submtit">
-                                        <button class="ps-btn ps-btn--fullwidth">Create an Account</button>
+                                        <a href="seller-profile.html" class="ps-btn ps-btn--fullwidth">Create an Account</a>
                                     </div>
                                 </div>
                                 <div class="ps-form__footer">
