--- a/seller-message.html
+++ b/seller-message.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from nouthemes.net/html/martfury/store-list.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 17 May 2020 08:50:00 GMT -->
+<!-- Mirrored from nouthemes.net/html/martfury/checkout.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 17 May 2020 08:36:58 GMT -->
 
 <head>
     <meta charset="utf-8">
@@ -25,8 +25,6 @@
     <link rel="stylesheet" href="plugins/jquery-ui/jquery-ui.min.css">
     <link rel="stylesheet" href="plugins/select2/dist/css/select2.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/autopart.css">
-    <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/custom.css">
 </head>
 
@@ -148,97 +146,93 @@
     </header>
 
 
-
-    <div class="ps-page--single ps-page--vendor">
-        <div class="ps-page--my-account">
-            <div class="ps-breadcrumb">
-                <div class="ps-container">
-                    <ul class="breadcrumb">
-                        <li><a href="index-2.html">Home</a></li>
-                        <li>My account</li>
-                    </ul>
-                </div>
+    <div class="ps-page--simple">
+        <div class="ps-breadcrumb">
+            <div class="ps-container">
+                <ul class="breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li>Seller Message</li>
+                </ul>
             </div>
-            <div class="ps-my-account">
-                <div class="container">
-                    <form class="ps-form--account ps-tab-root" action="#" method="get">
-                        <ul class="ps-tab-list">
-                            <li class="active"><a href="#sign-in">Buyer Login</a></li>
-                            <li><a href="#register">Register</a></li>
-                        </ul>
-                        <div class="ps-tabs">
-                            <div class="ps-tab active" id="sign-in">
-                                <div class="ps-form__content">
-                                    <h5>Log In Your Account</h5>
-                                    <div class="form-group">
-                                        <input class="form-control" type="text" placeholder="Username or email address">
-                                    </div>
-                                    <div class="form-group form-forgot">
-                                        <input class="form-control" type="text" placeholder="Password"><a href="#" data-toggle="tooltip" title="This is a prototype">Forgot?</a>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="ps-checkbox">
-                                            <input class="form-control" type="checkbox" id="remember-me" name="remember-me">
-                                            <label for="remember-me">Rememeber me</label>
+        </div>
+        <div class="ps-page--single ps-page--vendor">
+            <section class="ps-store-list">
+                <div class="ps-container">
+                    <aside class="ps-block--store-banner">
+                        <div class="ps-block__content bg--cover" data-background="img/vendor/store/default_banner.jpg">
+                            <h3>Concorde Garments Group</h3><a class="ps-block__inquiry" href="#"><i class="fa fa-edit"></i> Edit</a>
+                        </div>
+                        <div class="ps-block__user">
+                            <div class="ps-block__user-avatar"><img src="img/vendor/store/user/5.jpg" alt="">
+                                <select class="ps-rating" data-read-only="true">
+                                    <option value="1">1</option>
+                                    <option value="1">2</option>
+                                    <option value="1">3</option>
+                                    <option value="1">4</option>
+                                    <option value="2">5</option>
+                                </select>
+                            </div>
+                            <div class="ps-block__user-content">
+                                <p><i class="icon-map-marker"></i> Jahangir Tower, Kazi Nazrul Islam Ave, Dhaka 1215</p>
+                                <p><i class="icon-envelope"></i> <a href="#" class="__cf_email__" data-cfemail="caada5bab8a58aada7aba3a6e4a9a5a7">[email&#160;protected]</a></p>
+                                <p><i class="icon-home"></i> Company Details</p>
+                            </div>
+                        </div>
+                    </aside>
+                    <div class="ps-section__wrapper">
+                        <div class="ps-section__left">
+                            <aside class="widget widget--vendor">
+                                <h3 class="widget-title">Product Upload</h3>
+                                <a class="ps-btn ps-btn--black" style="display: block;" href="#">+ Add New Product</a>
+                            </aside>
+                            <aside class="widget widget--vendor">
+                                <h3 class="widget-title">Product Search</h3>
+                                <div class="form-group--icon">
+                                    <input class="form-control" type="text" placeholder="Search..."><i class="icon-magnifier"></i>
+                                </div>
+                            </aside>
+                            <aside class="widget widget--vendor">
+                                <h3 class="widget-title">Product Categories</h3>
+                                <ul class="ps-list--arrow">
+                                    <li><a href="#">Jeans</a></li>
+                                    <li><a href="#">Casual T-Shirt</a></li>
+                                    <li><a href="#">Formal Shirt</a></li>
+                                </ul>
+                            </aside>
+                        </div>
+                        <div class="ps-section__right">
+                            <nav class="ps-store-link">
+                                <ul>
+                                    <li><a href="seller-profile.html">Products</a></li>
+                                    <li class="active"><a href="#">Message</a></li>
+                                </ul>
+                            </nav>
+                            <div class="ps-document">
+                                <div class="ps-post-comments new-style">
+                                    <div class="ps-block--comment">
+                                        <div class="ps-block__thumbnail"><img src="https://1.gravatar.com/avatar/af7935f33b10cec23f77b8d9717641df?s=70&amp;d=mm&amp;r=g" alt=""></div>
+                                        <div class="ps-block__content">
+                                            <h5>Jason bradley<small>MARCH 12, 2013 AT 1:17 PM</small></h5>
+                                            <p>Cras id nulla at metus congue auctor. Suspendisse auctor dictum orci quis interdum. Nullam et eleifend metus. Integer in est orci. Duis hendrerit ex metus, vel tempor sem aliquet nec. Donec ornare hend rerit
+                                                bibendum.
                                         </div>
                                     </div>
-                                    <div class="form-group submtit">
-                                        <button class="ps-btn ps-btn--fullwidth">Login</button>
+                                    <div class="ps-block--comment">
+                                        <div class="ps-block__thumbnail"><img src="https://2.gravatar.com/avatar/b2c1febfd11117eef66c351c1d4c10f1?s=70&amp;d=mm&amp;r=g" alt=""></div>
+                                        <div class="ps-block__content">
+                                            <h5>Jared Erickson<small>MARCH 12, 2013 AT 1:17 PM</small></h5>
+                                            <p>Ut tellus ligula, interdum a interdum ut, egestas ut ipsum. Vivamus viverra consequat ipsum, nec auctor dolor eleifend sit amet. Nulla cursus fringilla metus a dictum</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="ps-form__footer">
-                                    <p>Connect with:</p>
-                                    <ul class="ps-list--social">
-                                        <li><a class="facebook" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a class="google" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-google-plus"></i></a></li>
-                                        <li><a class="twitter" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a class="instagram" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-instagram"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="ps-tab" id="register">
-                                <div class="ps-form__content">
-                                    <h5>Register Buyer Account</h5>
-                                    <div class="form-group">
-                                        <input class="form-control" type="text" placeholder="Name">
-                                    </div>
-                                    <div class="form-group">
-                                        <input class="form-control" type="text" placeholder="Email Address">
-                                    </div>
-                                    <div class="form-group">
-                                        <input class="form-control" type="text" placeholder="HQ Address">
-                                    </div>
-                                    <div class="form-group">
-                                        <input class="form-control" type="number" placeholder="Buying House Number">
-                                    </div>
-
-                                    <!--
-                                    <div class="form-group">
-                                        <input class="form-control" type="text" placeholder="Password">
-                                    </div>
-                                    --->
-                                    <div class="form-group submtit">
-                                        <button class="ps-btn ps-btn--fullwidth">Create an Account</button>
-                                    </div>
-                                </div>
-                                <div class="ps-form__footer">
-                                    <p>Connect with:</p>
-                                    <ul class="ps-list--social">
-                                        <li><a class="facebook" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a class="google" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-google-plus"></i></a></li>
-                                        <li><a class="twitter" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a class="instagram" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-instagram"></i></a></li>
-                                    </ul>
                                 </div>
                             </div>
                         </div>
-                    </form>
+                    </div>
                 </div>
-            </div>
+            </section>
         </div>
     </div>
-
-
+    <!--include ../../partials/sections/newsletter-->
     <footer class="ps-footer ps-footer--3">
         <div class="ps-container">
             <div class="ps-block--site-features ps-block--site-features-2">
@@ -337,8 +331,6 @@
             </form>
         </div>
     </div>
-
-    <!-- popup modal -->
     <div class="modal fade" id="product-quickview" tabindex="-1" role="dialog" aria-labelledby="product-quickview" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content"><span class="modal-close" data-dismiss="modal"><i class="icon-cross2"></i></span>
@@ -346,14 +338,15 @@
                     <div class="ps-product__header">
                         <div class="ps-product__thumbnail" data-vertical="false">
                             <div class="ps-product__images" data-arrow="true">
-                                <div class="item"><img src="img/products/detail/image-swatches/1.jpg" alt=""></div>
-                                <div class="item"><img src="img/products/detail/image-swatches/2.jpg" alt=""></div>
+                                <div class="item"><img src="img/products/detail/fullwidth/1.jpg" alt=""></div>
+                                <div class="item"><img src="img/products/detail/fullwidth/2.jpg" alt=""></div>
+                                <div class="item"><img src="img/products/detail/fullwidth/3.jpg" alt=""></div>
                             </div>
                         </div>
                         <div class="ps-product__info">
-                            <h1>Sleeve Linen Blend Caro Pane Shirt</h1>
+                            <h1>Marshall Kilburn Portable Wireless Speaker</h1>
                             <div class="ps-product__meta">
-                                <p>Brand:<a href="shop-default.html">POLO</a></p>
+                                <p>Brand:<a href="shop-default.html">Sony</a></p>
                                 <div class="ps-product__rating">
                                     <select class="ps-rating" data-read-only="true">
                                         <option value="1">1</option>
@@ -364,20 +357,18 @@
                                     </select><span>(1 review)</span>
                                 </div>
                             </div>
-                            <h4 class="ps-product__price">$5.00</h4>
+                            <h4 class="ps-product__price">$36.78 – $56.99</h4>
                             <div class="ps-product__desc">
-                                <p>Sold By:<a href="shop-default.html"><strong> Muhammad Textile</strong></a></p>
+                                <p>Sold By:<a href="shop-default.html"><strong> Go Pro</strong></a></p>
                                 <ul class="ps-list--dot">
-                                    <li> <b>Unit Price: $5.00</b></li>
-                                    <li> Care Instructions: Gentle Machine Wash Onl</li>
-                                    <li> Fit Type: Slim Fit </li>
-                                    <li> Fabric: Cotton </li>
-                                    <li> Sleeve Type: Full Sleeve </li>
-                                    <li> Size: XS, S, M, L, XL, XXL, XXXL </li>
-                                    <li> Quantity: 1,200 Pieces </li>
+                                    <li> Unrestrained and portable active stereo speaker</li>
+                                    <li> Free from the confines of wires and chords</li>
+                                    <li> 20 hours of portable capabilities</li>
+                                    <li> Double-ended Coil Cord with 3.5mm Stereo Plugs Included</li>
+                                    <li> 3/4″ Dome Tweeters: 2X and 4″ Woofer: 1X</li>
                                 </ul>
                             </div>
-                            <div class="ps-product__shopping"><a class="ps-btn ps-btn--black" href="#" data-toggle="tooltip" title="This is a prototype">Buy Sample($5)</a><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">Make Offer</a>
+                            <div class="ps-product__shopping"><a class="ps-btn ps-btn--black" href="#" data-toggle="tooltip" title="This is a prototype">Add to cart</a><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">Buy Now</a>
                                 <div class="ps-product__actions"><a href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-heart"></i></a><a href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-chart-bars"></i></a></div>
                             </div>
                         </div>
@@ -386,10 +377,6 @@
             </div>
         </div>
     </div>
-
-
-    <!-- scripts -->
-    <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script src="plugins/jquery-1.12.4.min.js"></script>
     <script src="plugins/popper.min.js"></script>
     <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
@@ -414,6 +401,6 @@
 </body>
 
 
-<!-- Mirrored from nouthemes.net/html/martfury/store-list.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 17 May 2020 08:50:22 GMT -->
+<!-- Mirrored from nouthemes.net/html/martfury/checkout.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 17 May 2020 08:36:58 GMT -->
 
 </html>
